--- a/test/style.css
+++ b/test/style.css
@@ -1,18 +1,18 @@
-/*.input-color-container {
+.input-color-container {
   position: relative;
   overflow: hidden;
   width: 14em;
-  height: 12em;
-  border: solid 0.1em #ddd;
-  border-radius: 40px;
+  height: 16em;
+  border: solid 0.01em #ddd;
+  border-radius: 40% 20%;
 }
-*/
-/*.input-color {
+
+.input-color {
   position: absolute;
-  right: -1px;
-  top: -1px;
-  width: 56px;
-  height: 56px;
+  right: -100px;
+  top: -10px;
+  width: 156em;
+  height: 156em;
   border: solid;
 }
 
@@ -20,4 +20,4 @@
   cursor: pointer;
   text-decoration: underline;
   color: #3498db;
-}*/
+}
